--- a/pympress/share/xml/presenter.glade
+++ b/pympress/share/xml/presenter.glade
@@ -2,6 +2,17 @@
 <!-- Generated with glade 3.38.2 -->
 <interface>
   <requires lib="gtk+" version="3.4"/>
+  <object class="GtkAdjustment" id="annotation_adjustment">
+    <property name="upper">100</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
+  <object class="GtkListStore" id="annotations_liststore">
+    <columns>
+      <!-- column-name annotation_text -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkSizeGroup" id="previews_sizegroup"/>
   <object class="GtkAdjustment" id="spin_adjust">
     <property name="lower">1</property>
@@ -18,6 +29,8 @@
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
     <signal name="delete-event" handler="app.quit" swapped="no"/>
     <signal name="drag-data-received" handler="on_drag_drop" swapped="no"/>
+    <signal name="key-press-event" handler="on_key_input" swapped="no"/>
+    <signal name="key-release-event" handler="on_key_input" swapped="no"/>
     <signal name="scroll-event" handler="on_scroll" swapped="no"/>
     <child>
       <object class="GtkBox" id="bigvbox">
@@ -770,22 +783,88 @@
                         <property name="label-xalign">0</property>
                         <property name="shadow-type">in</property>
                         <child>
-                          <object class="GtkScrolledWindow" id="scrolled_window">
+                          <object class="GtkBox">
                             <property name="visible">True</property>
-                            <property name="can-focus">True</property>
-                            <property name="min-content-width">10</property>
-                            <property name="min-content-height">10</property>
+                            <property name="can-focus">False</property>
+                            <property name="orientation">vertical</property>
                             <child>
-                              <object class="GtkTextView" id="annotations_textview">
+                              <object class="GtkTreeView" id="annotations_treeview">
                                 <property name="visible">True</property>
                                 <property name="can-focus">True</property>
-                                <property name="has-focus">True</property>
-                                <property name="editable">False</property>
-                                <property name="wrap-mode">word</property>
-                                <property name="cursor-visible">False</property>
-                                <property name="accepts-tab">False</property>
-                                <property name="monospace">True</property>
+                                <property name="vadjustment">annotation_adjustment</property>
+                                <property name="vscroll-policy">natural</property>
+                                <property name="model">annotations_liststore</property>
+                                <property name="headers-visible">False</property>
+                                <property name="headers-clickable">False</property>
+                                <property name="reorderable">True</property>
+                                <property name="search-column">0</property>
+                                <property name="enable-tree-lines">True</property>
+                                <child internal-child="selection">
+                                  <object class="GtkTreeSelection"/>
+                                </child>
+                                <child>
+                                  <object class="GtkTreeViewColumn" id="annotation_column">
+                                    <property name="title" translatable="yes">column</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="annotation_renderer">
+                                        <property name="editable">True</property>
+                                        <signal name="edited" handler="annotations.editing_validated" swapped="no"/>
+                                        <signal name="editing-canceled" handler="annotations.editing_finished" swapped="no"/>
+                                        <signal name="editing-started" handler="annotations.editing_started" swapped="no"/>
+                                      </object>
+                                      <attributes>
+                                        <attribute name="text">0</attribute>
+                                      </attributes>
+                                    </child>
+                                  </object>
+                                </child>
                               </object>
+                              <packing>
+                                <property name="expand">True</property>
+                                <property name="fill">True</property>
+                                <property name="position">0</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkButtonBox">
+                                <property name="visible">True</property>
+                                <property name="can-focus">False</property>
+                                <property name="halign">end</property>
+                                <property name="layout-style">start</property>
+                                <child>
+                                  <object class="GtkButton" id="annotation_add">
+                                    <property name="label" translatable="yes">+</property>
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">True</property>
+                                    <property name="receives-default">True</property>
+                                    <property name="action-name">app.add-annotation</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkButton" id="annotation_remove">
+                                    <property name="label" translatable="yes">-</property>
+                                    <property name="visible">True</property>
+                                    <property name="can-focus">True</property>
+                                    <property name="receives-default">True</property>
+                                    <property name="action-name">app.remove-annotation</property>
+                                  </object>
+                                  <packing>
+                                    <property name="expand">True</property>
+                                    <property name="fill">True</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="expand">False</property>
+                                <property name="fill">True</property>
+                                <property name="position">1</property>
+                              </packing>
                             </child>
                           </object>
                         </child>
