--- a/pympress/share/xml/media_overlay.glade
+++ b/pympress/share/xml/media_overlay.glade
@@ -8,19 +8,6 @@
     <property name="orientation">vertical</property>
     <signal name="map" handler="handle_embed" swapped="no"/>
     <child>
-      <object class="GtkDrawingArea" id="movie_zone">
-        <property name="visible">True</property>
-        <property name="can-focus">False</property>
-        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
-        <signal name="button-press-event" handler="play_pause" swapped="no"/>
-      </object>
-      <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">0</property>
-      </packing>
-    </child>
-    <child>
       <object class="GtkBox" id="toolbar">
         <property name="visible">True</property>
         <property name="can-focus">False</property>
@@ -99,6 +86,21 @@
       <packing>
         <property name="expand">False</property>
         <property name="fill">False</property>
+        <property name="pack-type">end</property>
+        <property name="position">0</property>
+      </packing>
+    </child>
+    <child>
+      <object class="GtkDrawingArea" id="movie_zone">
+        <property name="visible">True</property>
+        <property name="can-focus">False</property>
+        <property name="events">GDK_BUTTON_PRESS_MASK | GDK_STRUCTURE_MASK</property>
+        <signal name="button-press-event" handler="play_pause" swapped="no"/>
+      </object>
+      <packing>
+        <property name="expand">True</property>
+        <property name="fill">True</property>
+        <property name="pack-type">end</property>
         <property name="position">1</property>
       </packing>
     </child>
