--- a/pympress/share/xml/layout_dialog.glade
+++ b/pympress/share/xml/layout_dialog.glade
@@ -18,28 +18,6 @@
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkListStore" id="layouts_model">
-    <columns>
-      <!-- column-name layout -->
-      <column type="gchararray"/>
-      <!-- column-name layout_name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0">notes</col>
-        <col id="1" translatable="yes">Notes</col>
-      </row>
-      <row>
-        <col id="0">plain</col>
-        <col id="1" translatable="yes">Plain</col>
-      </row>
-      <row>
-        <col id="0">note_pages</col>
-        <col id="1" translatable="yes">Note pages</col>
-      </row>
-    </data>
-  </object>
   <object class="GtkAdjustment" id="next_count_adjustment">
     <property name="lower">1</property>
     <property name="upper">16</property>
@@ -95,24 +73,19 @@
             <property name="visible">True</property>
             <property name="can-focus">False</property>
             <child>
-              <object class="GtkComboBox" id="layout_selector">
+              <object class="GtkComboBoxText" id="layout_selector">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="valign">center</property>
-                <property name="model">layouts_model</property>
-                <property name="active">0</property>
-                <property name="has-frame">False</property>
+                <property name="active">1</property>
                 <property name="has-entry">True</property>
-                <property name="entry-text-column">1</property>
-                <property name="popup-fixed-width">False</property>
-                <property name="id-column">0</property>
                 <property name="active-id">plain</property>
+                <items>
+                  <item id="notes" translatable="yes">Notes</item>
+                  <item id="plain" translatable="yes">Plain</item>
+                  <item id="note_pages" translatable="yes">Note pages</item>
+                  <item id="highlight" translatable="yes">Highlighting</item>
+                </items>
                 <signal name="changed" handler="layout_selected" swapped="no"/>
-                <child internal-child="entry">
-                  <object class="GtkEntry">
-                    <property name="can-focus">False</property>
-                  </object>
-                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
