--- a/pympress/share/xml/layout_dialog.glade
+++ b/pympress/share/xml/layout_dialog.glade
@@ -6,9 +6,11 @@
     <columns>
       <!-- column-name widget -->
       <column type="gchararray"/>
-      <!-- column-name is_box -->
+      <!-- column-name has_resizeable -->
       <column type="gboolean"/>
       <!-- column-name resizeable -->
+      <column type="gboolean"/>
+      <!-- column-name has_orientation -->
       <column type="gboolean"/>
       <!-- column-name orientation -->
       <column type="gchararray"/>
@@ -86,6 +88,11 @@
                   <item id="highlight" translatable="yes">Highlighting</item>
                 </items>
                 <signal name="changed" handler="layout_selected" swapped="no"/>
+                <child internal-child="entry">
+                  <object class="GtkEntry">
+                    <property name="can-focus">False</property>
+                  </object>
+                </child>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -133,7 +140,7 @@
                 <child>
                   <object class="GtkCellRendererText" id="widget_renderer"/>
                   <attributes>
-                    <attribute name="text">5</attribute>
+                    <attribute name="text">6</attribute>
                   </attributes>
                 </child>
               </object>
@@ -164,8 +171,8 @@
                     <signal name="changed" handler="orientation_changed" swapped="no"/>
                   </object>
                   <attributes>
-                    <attribute name="visible">1</attribute>
-                    <attribute name="text">3</attribute>
+                    <attribute name="visible">3</attribute>
+                    <attribute name="text">4</attribute>
                   </attributes>
                 </child>
               </object>
@@ -180,8 +187,8 @@
                     <signal name="edited" handler="next_slide_count_edited" swapped="no"/>
                   </object>
                   <attributes>
-                    <attribute name="visible">4</attribute>
-                    <attribute name="text">4</attribute>
+                    <attribute name="visible">5</attribute>
+                    <attribute name="text">5</attribute>
                   </attributes>
                 </child>
               </object>
