--- a/pympress/share/xml/content.glade
+++ b/pympress/share/xml/content.glade
@@ -13,8 +13,10 @@
     <property name="has-resize-grip">True</property>
     <property name="show-menubar">False</property>
     <signal name="configure-event" handler="on_configure_win" swapped="no"/>
-    <signal name="scroll-event" handler="on_scroll" swapped="no"/>
     <signal name="delete-event" handler="app.quit" swapped="no"/>
+    <signal name="key-press-event" handler="on_key_input" swapped="no"/>
+    <signal name="key-release-event" handler="on_key_input" swapped="no"/>
+    <signal name="scroll-event" handler="on_scroll" swapped="no"/>
     <child>
       <object class="GtkAspectFrame" id="c_frame">
         <property name="visible">True</property>
